marmitegasm/stylesheets/application.css
/* ------------------------------ general styles ------------------------------*/
canvas {
  background-color: #ffffff;
}

body {
  margin: 0;
  -webkit-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  touch-action: none;
}

canvas { width: 100%; height: 100% }


/* ------------------------------ nav styles ------------------------------*/


nav {
	width: 150px;
	background-color: #e42313;
	height: 200px;
	margin: 0;
	margin-right: 50px;
	position: fixed;
	top: -240px;
	left: 0;
	opacity: 0.9;
	padding-top: 40px;
	z-index: 5;
}

.open_nav {
	margin-left: 5px;

}

.nav_item {
	margin-top: auto;
}

p, a {
	left: 5px;
	font-family: 'Courier New';
}

/* ------------------------------ volume control styles ------------------------------*/

.volume-control {
	position: fixed;
	top: 30px;
	left: 12px;
	display: flex;
	flex-direction: column;
	align-items: center;
	z-index: 10;
}

.volume-track {
	width: 1px;
	height: 80px;
	background: #000;
	position: relative;
	cursor: pointer;
}

.volume-bead {
	width: 9px;
	height: 9px;
	background: #000;
	border-radius: 50%;
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	cursor: grab;
}

.volume-bead:active {
	cursor: grabbing;
}

.mute-btn {
	background: none;
	border: none;
	cursor: pointer;
	padding: 4px;
	margin-top: 8px;
	display: flex;
	align-items: center;
	justify-content: center;
}

.speaker-icon {
	width: 18px;
	height: 18px;
	color: #000;
}

.speaker-icon path {
	stroke: #000;
	fill: none;
}

.speaker-body {
	fill: #000 !important;
}

